
[TestResolve_AllPresets - 1]
baseimage
cis/generic-linux/etcpasswdpermissions
cpp/conanlock
cve/cve-2020-11978
cve/cve-2020-16846
cve/cve-2022-33891
cve/cve-2023-38408
cve/cve-2023-6019
cve/cve-2024-2912
dart/pubspec
dotnet/depsjson
dotnet/packagesconfig
dotnet/packageslockjson
erlang/mixlock
filesystem/vendored
go/binary
go/gomod
govulncheck/binary
haskell/cabal
haskell/stacklock
java/archive
java/gradlelockfile
java/gradleverificationmetadataxml
java/pomxml
javascript/bunlock
javascript/nodemodules
javascript/packagelockjson
javascript/pnpmlock
javascript/yarnlock
license/depsdev
misc/brew-source
os/apk
os/dpkg
os/homebrew
osv/osvscannerjson
php/composerlock
python/pdmlock
python/pipfilelock
python/poetrylock
python/pylock
python/requirements
python/uvlock
python/wheelegg
r/renvlock
ruby/gemfilelock
rust/cargoauditable
rust/cargolock
sbom/cdx
sbom/spdx
transitivedependency/pomxml
transitivedependency/requirements
vcs/gitrepo
vex/os-duplicate/apk
vex/os-duplicate/dpkg
vulnmatch/osvdev
vulnmatch/osvlocal
weakcredentials/codeserver
weakcredentials/etcshadow
weakcredentials/filebrowser
weakcredentials/winlocal
---

[TestResolve_Annotators_Presets/artifact - 1]
baseimage
go/binary
java/archive
javascript/nodemodules
misc/brew-source
os/apk
os/dpkg
os/homebrew
python/wheelegg
rust/cargoauditable
vex/os-duplicate/apk
vex/os-duplicate/dpkg
---

[TestResolve_Detectors_Presets/cis - 1]
cis/generic-linux/etcpasswdpermissions
---

[TestResolve_Detectors_Presets/govulncheck - 1]
govulncheck/binary
---

[TestResolve_Detectors_Presets/untested - 1]
cve/cve-2020-11978
cve/cve-2020-16846
cve/cve-2022-33891
cve/cve-2023-38408
cve/cve-2023-6019
cve/cve-2024-2912
---

[TestResolve_Detectors_Presets/weakcreds - 1]
weakcredentials/codeserver
weakcredentials/etcshadow
weakcredentials/filebrowser
weakcredentials/winlocal
---

[TestResolve_Enrichers_Presets/artifact - 1]
baseimage
go/binary
java/archive
javascript/nodemodules
misc/brew-source
os/apk
os/dpkg
os/homebrew
python/wheelegg
rust/cargoauditable
vex/os-duplicate/apk
vex/os-duplicate/dpkg
---

[TestResolve_Enrichers_Presets/licenses - 1]
license/depsdev
---

[TestResolve_Enrichers_Presets/transitive - 1]

---

[TestResolve_Enrichers_Presets/vulns - 1]
vulnmatch/osvdev
vulnmatch/osvlocal
---

[TestResolve_Extractors_Presets/artifact - 1]
baseimage
go/binary
java/archive
javascript/nodemodules
misc/brew-source
os/apk
os/dpkg
os/homebrew
python/wheelegg
rust/cargoauditable
vex/os-duplicate/apk
vex/os-duplicate/dpkg
---

[TestResolve_Extractors_Presets/directory - 1]
filesystem/vendored
vcs/gitrepo
---

[TestResolve_Extractors_Presets/lockfile - 1]
cpp/conanlock
dart/pubspec
dotnet/depsjson
dotnet/packagesconfig
dotnet/packageslockjson
erlang/mixlock
go/gomod
haskell/cabal
haskell/stacklock
java/gradlelockfile
java/gradleverificationmetadataxml
java/pomxml
javascript/bunlock
javascript/packagelockjson
javascript/pnpmlock
javascript/yarnlock
os/apk
os/dpkg
osv/osvscannerjson
php/composerlock
python/pdmlock
python/pipfilelock
python/poetrylock
python/pylock
python/requirements
python/uvlock
r/renvlock
ruby/gemfilelock
rust/cargolock
---

[TestResolve_Extractors_Presets/sbom - 1]
sbom/cdx
sbom/spdx
---
